# SimpleQrBot

./: .example.secrets.toml  .gitignore  main.py  pyproject.toml  requirements.txt
src/: database.py  enums.py  logging.py
src/config/: __init__.py  enums.py  main.py  settings_model.py
src/db/: database.db
src/handlers/: keyboard.py  texts.py  types.py  utils.py
src/handlers/admin/: __init__.py  main.py
src/handlers/user/: __init__.py  main.py  qr.py
src/kit/: bot.py  schemas.py  singleton.py  utils.py
src/kit/models/: __init__.py  base.py
src/kit/repository/: __init__.py  base.py  mixins.py  protocol.py
src/middlewares/: __init__.py  main.py
src/models/: __init__.py  users.py
src/qr_code/: __init__.py  main.py
src/users/: repository.py  service.py
