[project]
name = "simpleqrbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==24.1.0",
    "aiogram==3.22.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.15",
    "aiosignal==1.4.0",
    "aiosqlite==0.21.0",
    "annotated-types==0.7.0",
    "attrs==25.3.0",
    "certifi==2025.8.3",
    "frozenlist==1.7.0",
    "greenlet==3.2.4",
    "idna==3.10",
    "magic-filter==1.0.12",
    "multidict==6.6.4",
    "propcache==0.3.2",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydantic-settings==2.10.1",
    "python-dotenv==1.1.1",
    "segno==1.6.6",
    "sqlalchemy==2.0.43",
    "structlog==25.4.0",
    "tomli==2.2.1",
    "typing-extensions==4.15.0",
    "typing-inspection==0.4.1",
    "yarl==1.20.1",
]
